--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
   </head>
   <body>
     <div class="navbar">
-      <span class="brand">GROOVE</span>
+      <a href="index.html" class="brand">GROOVE</a>
     <nav>
       <ul class="navlinks">
-        <li><a href="index.html" class="act">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="act">About</a></li>
         <li><a href="songs.html">Songs</a></li>
         <button class="btn-1">Book a show?</button>
       </ul>
