--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="navbar">
-      <span class="brand">GROOVE</span>
+      <a href="index.html" class="brand">GROOVE</a>
     <nav>
       <ul class="navlinks">
         <li><a href="index.html" class="act">Home</a></li>
@@ -45,6 +45,20 @@
       </div>
       <i id="arrow" class="fa-solid fa-angles-down"></i>
     </section>
+    <div class="intro">
+      <div class="intro-text">
+        <h6 class="hide">
+          <span class="text">Welcome</span>
+        </h6>
+        <h6 class="hide">
+          <span class="text">To</span>
+        </h6>
+        <h6 class="hide">
+          <span class="text"> Groove Garden</span>
+        </h6>
+      </div>
+    </div>
+    <div class="slider"></div>
     <section id="about" class="bg">
       <div class="aboutcont">
         <div class="abimg"><img src="img/band.webp" alt="band" /></div>
@@ -59,7 +73,7 @@
               contemporary acts like Bruno Mars and Anderson .Paak. Join us on
               the dance floor and let the music move you!
             </p>
-            <button class="btn-2 ani">Know More</button>
+            <a href="about.html"><button class="btn-2 ani">Know More</button></a>
           </div>
         </div>
       </div>
@@ -84,7 +98,7 @@
               sure to follow us on [insert social media platform] for updates on
               new releases.
             </p>
-            <button class="btn-2">Browse Albums</button>
+            <a href="songs.html"><button class="btn-2">Browse Albums</button></a>
           </div>
         </div>
       </div>
