--- a/songs.html
+++ b/songs.html
@@ -19,11 +19,11 @@
   </head>
   <body>
     <div class="navbar">
-      <span class="brand">GROOVE</span>
+      <a href="index.html" class="brand">GROOVE</a>
     <nav>
       <ul class="navlinks">
-        <li><a href="index.html" class="act">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="act">About</a></li>
         <li><a href="songs.html">Songs</a></li>
         <button class="btn-1">Book a show?</button>
       </ul>
@@ -37,9 +37,9 @@
     <section class="songs-sec bg">
       <h2>Our Songs</h2>
       <div class="songlist">
-        <div class="s">
+        <div class="s s1">
           <img src="img/microphone.jpg" alt="song" />
-          <div class="sc">
+          <div class="sc sc1">
             <span>MAY, 2022</span>
             <h4>Soul Power</h4>
             <p>
@@ -50,9 +50,9 @@
             <button class="btn-2">Listen on Spotify <i class="fa-brands fa-spotify"></i></button>
           </div>
         </div>
-        <div class="s">
+        <div class="s s2">
           <img src="img/microphone.jpg" alt="song" />
-          <div class="sc">
+          <div class="sc sc2">
             <span>MARCH, 2021</span>
             <h4>Electric Love</h4>
             <p>
@@ -62,9 +62,9 @@
             <button class="btn-2">Listen on Spotify <i class="fa-brands fa-spotify"></i></button>
           </div>
         </div>
-        <div class="s">
+        <div class="s s3">
           <img src="img/microphone.jpg" alt="song" />
-          <div class="sc">
+          <div class="sc sc3">
             <span>JULY, 2022</span>
             <h4>Feelin' Alright</h4>
             <p>
