--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="index.html" class="brand">GROOVE</a>
+      <a href="index.html" class="brand branda">GROOVE</a>
     <nav>
-      <ul class="navlinks">
+      <ul class="navlinks navlinksa">
         <li><a href="index.html" class="act">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="songs.html">Songs</a></li>
-        <button class="btn-1">Book a show?</button>
+        <button class="btn-1 btn-1a">Book a show?</button>
       </ul>
     </nav>
-    <div class="burger">
+    <div class="burger burgera">
       <div class="line"></div>
       <div class="line"></div>
       <div class="line"></div>
@@ -54,7 +54,7 @@
           <span class="text">To</span>
         </h6>
         <h6 class="hide">
-          <span class="text"> Groove Garden</span>
+          <span class="text">Groove Garden</span>
         </h6>
       </div>
     </div>
