--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="index.html" class="act">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="songs.html">Songs</a></li>
-        <button class="btn-1 btn-1a">Book a show?</button>
+        <button class="btn-1 btn-1a">Book a show</button>
       </ul>
     </nav>
     <div class="burger burgera">
