--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="act">About</a></li>
         <li><a href="songs.html">Songs</a></li>
-        <button class="btn-1">Book a show?</button>
+        <button class="btn-1">Book a show</button>
       </ul>
     </nav>
     <div class="burger">
